added 1a och 1b
